project image wrapping fixed

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ a {
 .info-images {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     
     
 }
